Add new RabbitMQ API
The interaction with RabbitMQ outside of the Flussewerk automation
should be easy and intuitive to use. This introduces a new API that
will replace the interactions via MessageBroker.